...
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageButton
            android:id="@+id/pocketmusic_play_button"
            android:layout_width="match_parent"
            android:layout_height="@dimen/actionbar_height"
            android:layout_gravity="center"
            android:layout_alignParentBottom="true"
            android:background="@drawable/button_background_selector"
            android:src="@drawable/ic_play" />
...
                android:layout_weight=".78"
                android:background="@color/solid_black">
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <com.myradev.lunarcode.pocketmusic.ui.TactScrollRecyclerView
                        android:id="@+id/tact_scroller"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:scrollbars="none"/>
                    <com.myradev.lunarcode.pocketmusic.fastscroller.FastScroller
                        android:id="@+id/fastscroll"
                        android:orientation="horizontal"
...
