<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Catroid: An on-device visual programming system for Android devices
  ~ Copyright (C) 2010-2025 The Catrobat Team
  ~ (<http://developer.catrobat.org/credits>)
  ~
  ~ This program is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU Affero General Public License as
  ~ published by the Free Software Foundation, either version 3 of the
  ~ License, or (at your option) any later version.
  ~
  ~ An additional term exception under section 7 of the GNU Affero
  ~ General Public License, version 3, is available at
  ~ http://developer.catrobat.org/license_additional_term
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
  ~ GNU Affero General Public License for more details.
  ~
  ~ You should have received a copy of the GNU Affero General Public License
  ~ along with this program.  If not, see <http://www.gnu.org/licenses/>.
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_vertical"
    android:orientation="horizontal">

   <CheckBox
       android:id="@+id/brick_checkbox"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:gravity="center_vertical"
       android:visibility="gone" />

    <com.myradev.lunarcode.ui.BrickLayout
        android:id="@+id/brick_set_pen_color_layout"
        style="@style/BrickContainer.Pen.Medium">

     <include layout="@layout/icon_brick_category_pen" />

    <TextView
        android:id="@+id/brick_set_pen_color_action_label"
        style="@style/BrickText.SingleLine"
        android:text="@string/brick_pen_color">
    </TextView>

    <TextView
        android:id="@+id/brick_set_pen_color_red_text_view"
        style="@style/BrickText"
        app:layout_newLine="true"
        android:text="@string/color_red">
    </TextView>

    <TextView
        android:id="@+id/brick_set_pen_color_action_red_edit_text"
        style="@style/BrickEditText">
    </TextView>

    <TextView
        android:id="@+id/brick_set_pen_color_green_text_view"
        style="@style/BrickText"
        android:text="@string/color_green">
    </TextView>

    <TextView
        android:id="@+id/brick_set_pen_color_action_green_edit_text"
        style="@style/BrickEditText">
    </TextView>

    <TextView
        android:id="@+id/brick_set_pen_color_blue_text_view"
        style="@style/BrickText"
        android:text="@string/color_blue">
    </TextView>

    <TextView
        android:id="@+id/brick_set_pen_color_action_blue_edit_text"
        style="@style/BrickEditText">
    </TextView>

    </com.myradev.lunarcode.ui.BrickLayout>

</LinearLayout>