...
    <string formatted="false" name="brick_context_dialog_move_brick">Move brick</string>
    <string formatted="false" name="brick_context_dialog_move_script">Move script</string>
    <string formatted="false" name="brick_context_dialog_move_definition">Move this definition</string>
    <string formatted="false" name="brick_context_dialog_delete_brick">Delete brick</string>
    <string formatted="false" name="brick_context_dialog_copy_brick">Copy brick</string>
    <string formatted="false" name="brick_context_dialog_copy_script">Copy script</string>
    <string formatted="false" name="brick_context_dialog_formula_edit_brick">Edit formula</string>
    <string formatted="false" name="brick_context_dialog_delete_script">Delete script</string>
    <string formatted="false" name="brick_context_dialog_delete_definition">Delete this definition</string>
    <string formatted="false" name="brick_context_dialog_comment_in">Enable brick</string>
    <string formatted="false" name="brick_context_dialog_comment_out">Disable brick</string>
    <string formatted="false" name="brick_context_dialog_highlight_brick_parts">Highlight brick parts</string>
    <string formatted="false" name="brick_context_dialog_comment_in_script">Enable script</string>
...
    <string formatted="false" name="brick_show_variable_size">size:</string>
    <string formatted="false" name="brick_show_variable_color">color:</string>
    <string formatted="false" name="brick_show_variable_aligned">aligned</string>
    <string formatted="false" name="brick_show_variable_aligned_centered">centered</string>
    <string formatted="false" name="brick_show_variable_aligned_left">left</string>
    <string formatted="false" name="brick_show_variable_aligned_right">right</string>
    <string formatted="false" name="brick_context_dialog_pick_color">Pick color</string>
    <string formatted="false" name="brick_context_dialog_pick_note">Pick note</string>
    <!-- -->


    <!-- Camera related strings -->
    <string formatted="false" name="brick_video">Turn camera</string>
...
